--- a/BLAZAMGui/UI/Dev/DevTools.razor
+++ b/BLAZAMGui/UI/Dev/DevTools.razor
@@ -25,6 +25,7 @@
         <MudDataGrid Items="@UserStateService.UserStates">
             <Columns>
                 <PropertyColumn Title="Username" Property="x => x.User.Identity==null?null:x.User.Identity.Name" />
+                <PropertyColumn Title="IP Address" Property="x => x.IPAddress==null?null:x.IPAddress.ToString()" />
 
                 <PropertyColumn Title="Auth Type" Property="x => x.User.Identity==null || x.User.Identity.AuthenticationType==null?null:x.User.Identity.AuthenticationType.ToString()" />
                 <PropertyColumn Title="Authenticated" Property="x => x.User.Identity==null?null:x.User.Identity.IsAuthenticated.ToString()" />
