--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -1,4 +1,5 @@
 ﻿@using BLAZAM.Update;
+@using System.Security.Principal;
 @inherits SettingsComponents
 
 
@@ -8,141 +9,145 @@
 
     @if (settings != null)
     {
-        @if (!UpdateService.HasWritePermission)
+
+
+        @switch (UpdateCredential)
         {
-            <MudAlert Class="mud-alert-filled-error">
-                There are no credentials configured with write permission to the application directory!
-                Try configuring custom update credentials.
-            </MudAlert>
+            case UpdateCredential.Application:
+                <MudAlert Icon="@Icons.Material.Filled.Warning" Class="mud-alert-filled-warning">
+                    The account running Blazam can write to the application directory.
+                    This exposes the host machine to unneccessary risk. Change the application identity
+                    to a lower privileged account to improve security.
+                </MudAlert>
+                break;
+            case UpdateCredential.Active_Directory:
+                <MudIcon Icon="@Icons.Material.Filled.Check" Color="Color.Success" />
+
+                <MudText>
+                    The Active Directory Credentials are validated for updating.
+                </MudText>
+                break;
+            case UpdateCredential.Update:
+                <MudIcon Icon="@Icons.Material.Filled.Check" Color="Color.Success" />
+
+                <MudText>
+                    The Update Credentials are validated for updating.
+                </MudText>
+                break;
+            case UpdateCredential.None:
+                <MudAlert Class="mud-alert-filled-error">
+                    There are no credentials configured with write permission to the application directory!
+                    Try configuring custom update credentials.
+                </MudAlert>
+                break;
         }
-        else
-        {
+        <SettingsField Label="@AppLocalization["Application Credentials"]">
 
-            @switch (UpdateService.UpdateCredential)
+            <MudTextField T="string" Label="@AppLocalization["Application Credentials"]" Disabled=true Value="@WindowsIdentity.GetCurrent().Name.ToString().Replace('_',' ')" />
+        </SettingsField>
+
+        <SettingsField Label="@AppLocalization["Update Credential Source"]">
+
+            <MudTextField T="string" Label="@AppLocalization["Update Credential Source"]" Disabled=true Value="@UpdateCredential.ToString().Replace('_',' ')" />
+        </SettingsField>
+
+        <SettingsField Label="@AppLocalization["Update Credentials"]">
+
+            <MudSwitch @bind-Checked=@settings.UseUpdateCredentials Label="@AppLocalization["Use Custom Credentials"]" />
+            @if (settings.UseUpdateCredentials)
             {
-                case UpdateCredential.Application:
-                    <MudAlert Icon="@Icons.Material.Filled.Warning" Class="mud-alert-filled-warning">
-                        The account running Blazam can write to the application directory.
-                        This exposes the host machine to unneccessary risk. Change the application identity
-                        to a lower privileged account to improve security.
-                    </MudAlert>
-                    break;
-                case UpdateCredential.Directory:
-                    <MudIcon Icon="@Icons.Material.Filled.Check" Color="Color.Success" />
+                <MudText>Configure custom update credentials.</MudText>
 
-                    <MudText>
-                        The Active Directory Credentials are validated for updating.
-                    </MudText>
-                    break;
-                case UpdateCredential.Update:
-                    <MudIcon Icon="@Icons.Material.Filled.Check" Color="Color.Success" />
+                <MudCard>
+                    <SettingsField Label="@AppLocalization["Domain"]">
 
-                    <MudText>
-                        The Update Credentials are validated for updating.
-                    </MudText>
-                    break;
+                        <MudTextField Label="@AppLocalization["Domain"]" @bind-Value="settings.UpdateDomain" />
+                    </SettingsField>
+
+                    <SettingsField Label="@AppLocalization["Username"]">
+
+                        <MudTextField Label="@AppLocalization["Username"]" @bind-Value="settings.UpdateUsername" />
+                    </SettingsField>
+
+                    <SettingsField Label="@AppLocalization["Password"]">
+
+                        <MudTextField Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="newUpdatePassword" />
+                    </SettingsField>
+                </MudCard>
             }
 
-            <MudText>Update Credential Source: @UpdateService.UpdateCredential.ToString()</MudText>
-            <SettingsField Label="@AppLocalization["Update Credentials"]">
-
-                <MudSwitch @bind-Checked=@settings.UseUpdateCredentials Label="@AppLocalization["Use Custom Credentials"]" />
-                @if (!settings.UseUpdateCredentials)
-                {
-                    <MudText>Using Active Directory connection credentials.</MudText>
-                }
-                else
-                {
-                    <MudText>Using custom update credentials.</MudText>
-
-                    <MudCard>
-                        <SettingsField Label="@AppLocalization["Domain"]">
-
-                            <MudTextField Label="@AppLocalization["Domain"]" @bind-Value="settings.UpdateDomain" />
-                        </SettingsField>
-
-                        <SettingsField Label="@AppLocalization["Username"]">
-
-                            <MudTextField Label="@AppLocalization["Username"]" @bind-Value="settings.UpdateUsername" />
-                        </SettingsField>
-
-                        <SettingsField Label="@AppLocalization["Password"]">
-
-                            <MudTextField Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="newUpdatePassword" />
-                        </SettingsField>
-                    </MudCard>
-                }
-
-
-            </SettingsField>
-            <SettingsField Label="@AppLocalization["Update Branch"]">
-
-                <MudSelect Label="@AppLocalization["Update Branch"]" @bind-Value=@settings.UpdateBranch HelperText="The stable branch is the recommended branch. Choosing Nightly is only recommended for test installations. Dev is only for developers.">
-                    @foreach (var val in updateBranches)
-                    {
-                        <MudSelectItem Value="@val">@val</MudSelectItem>
-                    }
-                </MudSelect>
-
-
-
-            </SettingsField>
-
-
-            <SettingsField Label="@AppLocalization["Update"]">
-
-                <FieldLabel>
-                    <MudText>
-                        @AppLocalization["Update"]
-                    </MudText>
-                    <MudIconButton Color="Color.Primary"
-                           OnClick=@(async()=>{await appUpdateComponent?.GetLatestUpdate();})
-                           Icon="@Icons.Material.Filled.Refresh" />
-
-                </FieldLabel>
-                <ChildContent>
-
-                    <ManualApplicationUpdater @ref=appUpdateComponent />
-
-                </ChildContent>
-
-
-            </SettingsField>
-
-
-            <SettingsField Label="@AppLocalization["Enable Auto Update"]">
-
-                <MudSwitch Label="@AppLocalization["Enable Auto Update"]" @bind-Checked=@(settings.AutoUpdate) />
-
-            </SettingsField>
-
-
-            @if (settings?.AutoUpdate == true)
-            {
-                <SettingsField Label="@AppLocalization["Auto Update Time"]">
-
-                    <MudTimePicker HelperText="The time of each day to automatically apply an update."
-                       @bind-Time="@settings.AutoUpdateTime" />
-
-
-                </SettingsField>
-
-
-            }
-
-        }
-        <SettingsField>
-
-            <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
 
         </SettingsField>
+        <SettingsField Label="@AppLocalization["Update Branch"]">
+
+            <MudSelect Label="@AppLocalization["Update Branch"]" @bind-Value=@settings.UpdateBranch HelperText="The stable branch is the recommended branch. Choosing Nightly is only recommended for test installations. Dev is only for developers.">
+                @foreach (var val in updateBranches)
+                {
+                    <MudSelectItem Value="@val">@val</MudSelectItem>
+                }
+            </MudSelect>
+
+
+
+        </SettingsField>
+
+
+
+        <SettingsField Label="@AppLocalization["Update"]">
+
+            <FieldLabel>
+                <MudText>
+                    @AppLocalization["Update"]
+                </MudText>
+                <MudIconButton Color="Color.Primary"
+                               OnClick=@(async()=>{await appUpdateComponent?.GetLatestUpdate();})
+                               Icon="@Icons.Material.Filled.Refresh" />
+
+            </FieldLabel>
+            <ChildContent>
+
+                <ManualApplicationUpdater @ref=appUpdateComponent />
+
+            </ChildContent>
+
+
+        </SettingsField>
+
+
+        <SettingsField Label="@AppLocalization["Enable Auto Update"]">
+
+            <MudSwitch Label="@AppLocalization["Enable Auto Update"]" @bind-Checked=@(settings.AutoUpdate) />
+
+        </SettingsField>
+
+
+        @if (settings?.AutoUpdate == true)
+        {
+            <SettingsField Label="@AppLocalization["Auto Update Time"]">
+
+                <MudTimePicker HelperText="The time of each day to automatically apply an update."
+                @bind-Time="@settings.AutoUpdateTime" />
+
+
+            </SettingsField>
+
+
+        }
+
     }
+    <SettingsField>
+
+        <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+    </SettingsField>
+    
 </MudForm>
 @code {
     string? newUpdatePassword;
     string? updatePasswordInDb;
     bool applicationIdentityCanWrite;
     bool haveCredentialsToApplicationRootDirectory;
+    UpdateCredential UpdateCredential;
     ManualApplicationUpdater? appUpdateComponent;
     AppSettings? settings = new AppSettings();
     List<string> updateBranches = new() { ApplicationReleaseBranches.Stable, ApplicationReleaseBranches.Nightly, ApplicationReleaseBranches.Dev };
@@ -157,7 +162,7 @@
             //Pull encrypted update pass and store encrypted value
             updatePasswordInDb = settings?.UpdatePassword;
             newUpdatePassword = updatePasswordInDb;
-
+            UpdateCredential = UpdateService.UpdateCredential;
 
         }
         LoadingData = false;
