--- a/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
+++ b/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
@@ -132,7 +132,8 @@
         </MudToolBar>
     </MudHidden>
     <MudSpacer />
-    <PageSpecificChat />
+    @* <PageSpecificChat /> *@
+    <EntrySpecificChat Entry="DirectoryEntry"/>
     <MudHidden Breakpoint="Breakpoint.SmAndUp">
 
         <MudMenu Class="align-self-end" StartIcon="@Icons.Material.Filled.Settings">
