Detect multiple failed AD connection attempts and warn on login page

--- a/BLAZAMGui/Layouts/LoginLayout.razor
+++ b/BLAZAMGui/Layouts/LoginLayout.razor
@@ -28,8 +28,15 @@
                     </MudCard>
                     @if (monitor.DirectoryConnected == ServiceConnectionState.Connecting)
                     {
-                        <MudProgressLinear Color="Color.Warning" Indeterminate=true />
-                        <MudAlert Style="left:25px;right:25px;" Class="absolute  mud-alert-filled-warning">Directory is connecting... Local admin login only...</MudAlert>
+                     
+                            <MudProgressLinear Color="Color.Warning" Indeterminate=true />
+                            <MudAlert Style="left:25px;right:25px;" Class="absolute  mud-alert-filled-warning">Directory is connecting... Local admin login only...</MudAlert>
+                        
+                        
+                    }
+                    @if (monitor.DirectoryConnected == ServiceConnectionState.Down){
+                        @* <MudProgressLinear Color="Color.Error" Indeterminate=true /> *@
+                        <MudAlert Style="left:25px;right:25px;" Class="absolute  mud-alert-filled-error">Unable to connect to directory after @directory.FailedConnectionAttempts attempts ... Local admin login only...</MudAlert>
 
                     }
                     
